# vex2pdf

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODO.md  vex2pdf.cdx.json
docs/: DEVELOPER_NOTES.md
examples/: generate_checksums.rs
src/: lib.rs  main.rs
src/files_proc/: processor.rs  traits.rs
src/files_proc/model/: file_ident.rs  files_pending_proc.rs  input_file_type.rs
src/lib_utils/: cli_args.rs  config.rs  env_vars.rs  errors.rs  run_utils.rs
src/lib_utils/concurrency/: common.rs  threadpool.rs  worker.rs
src/pdf/: font_config.rs  generator.rs
tests/: common.rs  integration_tests.rs  threading_integration_tests.rs
tests/test_artifacts/: README.md  expected_pdfs_chksums.txt
tests/test_artifacts/bom_src/run_test/: bom_vdr_minimal_with_vulns.json  bom_vdr_with_analysis.json  bom_vdr_with_analysis_alt.json  bom_vdr_with_complete_analysis.json  bom_vdr_with_ghsa_entries.json  bom_vdr_with_links_as_versions.json  bom_vdr_with_many_vulns_titles_override_cli.json  bom_vdr_with_no_vulns.json  bom_vex_with_links_as_versions.json
tests/test_artifacts/bom_src/run_test_xml/: bom_vdr_with_ghsa_entries.xml  bom_vdr_with_many_vulns.xml  bom_vdr_with_no_vulns.json  bom_vex_detailed.json  bom_xml_vdr_simple.xml  bom_xml_vdr_with_analysis.xml  bom_xml_vdr_with_ghsa_entries.xml  bom_xml_vex_simple.xml  sample_vex.xml
tests/test_artifacts/err_pdfs/: .gitignore
