[package]
name = "vex2pdf"
version = "0.8.2"
edition = "2021"
authors = ["Salem B. <jurassic.lizard@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to convert CycloneDX(VEX) JSON or XML documents to PDF reports"
repository = "https://gitlab.com/jurassicLizard/vex2pdf"
documentation = "https://docs.rs/vex2pdf"
readme = "README.md"
keywords = ["vex", "pdf", "security", "cyclonedx", "vulnerability"]
categories = ["command-line-utilities", "parsing"]

exclude = [
    ".github/",
    ".gitlab/",
    ".gitignore",
    ".gitlab-ci.yml"
]

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
cyclonedx-bom = "0.8.0"
env_logger = "0.11"
genpdf = "0.2.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
serde_json = "1.0.140"


[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
strip = true

[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
