[package]
name = "vex2pdf"
version = "1.0.0"
edition = "2021"
authors = ["Salem B. <jurassic.lizard@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to convert CycloneDX(VEX) JSON or XML documents to PDF reports"
repository = "https://gitlab.com/jurassicLizard/vex2pdf"
documentation = "https://docs.rs/vex2pdf"
readme = "README.md"
keywords = ["vex", "pdf", "security", "cyclonedx", "vulnerability"]
categories = ["command-line-utilities", "parsing"]

# Reference PDFs (42MB) are excluded from the published package to keep
# download size reasonable. Tests use checksums for validation instead.
exclude = [
    ".github/",
    ".gitlab/",
    ".gitignore",
    ".gitlab-ci.yml",
    "tests/test_artifacts/expected_pdfs/"
]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "vex2pdf"
required-features = ["cli"]

[[test]]
name = "integration_tests"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"], optional = true }
cyclonedx-bom = "0.8.0"
env_logger = { version = "0.11", optional = true }
genpdf = "0.2.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
serde_json = "1.0.140"


[dev-dependencies]
tempfile = "3.23.0"
blake3 = "1.5"

[profile.release]
strip = true

[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
