[package]
name = "vex2pdf"
version = "2.0.1"
edition = "2021"
authors = ["Salem B. <jurassic.lizard@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to convert CycloneDX(VEX) JSON or XML documents to PDF reports"
repository = "https://gitlab.com/jurassicLizard/vex2pdf"
documentation = "https://docs.rs/vex2pdf"
readme = "README.md"
keywords = ["vex", "pdf", "security", "cyclonedx", "vulnerability"]
categories = ["command-line-utilities", "parsing"]

# Reference PDFs (42MB) are excluded from the published package to keep
# download size reasonable. Tests use checksums for validation instead.
exclude = [
    ".github/",
    ".gitlab/",
    ".gitignore",
    ".gitlab-ci.yml",
    "tests/test_artifacts/expected_pdfs/"
]

[features]
default = ["cli","concurrency"]
cli = ["dep:clap", "dep:env_logger"]
concurrency = ["dep:jlizard-simple-threadpool"]

[[bin]]
name = "vex2pdf"
required-features = ["cli"]

[[test]]
name = "integration_tests"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"], optional = true }
cyclonedx-bom = "0.8.0"
env_logger = { version = "0.11.8", optional = true }
genpdf = "0.2.0"
jlizard-simple-threadpool = { version = "0.3.0", optional = true, features = ["log"] }
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_info"] }
serde_json = "1.0.145"


[dev-dependencies]
tempfile = "3.23.0"
blake3 = "1.8.2"

[profile.release]
strip = true
opt-level = 3

[profile.release-optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
